@@ -9,6 +9,7 @@ import ace.org.epms_backend.model.pip.PipRecord;
 import ace.org.epms_backend.repository.EmployeeRepository;
 import ace.org.epms_backend.repository.PipRecordRepository;
 import ace.org.epms_backend.service.PipService;
+import ace.org.epms_backend.mapper.PipMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -21,6 +22,7 @@ public class PipServiceImpl implements PipService {
 
     private final PipRecordRepository pipRecordRepository;
     private final EmployeeRepository employeeRepository;
+    private final PipMapper pipMapper;
 
     @Override
     public PipResponse createPip(PipCreateRequest request) {
@@ -31,18 +33,13 @@ public class PipServiceImpl implements PipService {
         Employee manager = employeeRepository.findById(request.getManagerId())
                 .orElseThrow(() -> new UserNotFoundException("Manager not found"));
 
-        PipRecord pip = new PipRecord();
+        PipRecord pip = pipMapper.toEntity(request);
+
         pip.setEmployee(employee);
         pip.setManager(manager);
-        pip.setStartDate(request.getStartDate());
-        pip.setEndDate(request.getEndDate());
-        pip.setReason(request.getReason());
-
         pip.setStatus(PipStatus.DRAFT);
 
-        pip = pipRecordRepository.save(pip);
-
-        return mapToResponse(pip);
+        return pipMapper.toResponse(pipRecordRepository.save(pip));
     }
 
     @Override
@@ -50,35 +47,22 @@ public class PipServiceImpl implements PipService {
         PipRecord pip = pipRecordRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("PIP not found"));
 
-        return mapToResponse(pip);
+        return pipMapper.toResponse(pip);
     }
 
     @Override
     public List<PipResponse> getAllPips() {
         return pipRecordRepository.findAll()
                 .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .map(pipMapper::toResponse)
+                .toList();
     }
 
     @Override
     public List<PipResponse> getPipsByEmployee(Long employeeId) {
         return pipRecordRepository.findByEmployeeId(employeeId)
                 .stream()
-                .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
-
-    private PipResponse mapToResponse(PipRecord pip) {
-        PipResponse response = new PipResponse();
-        response.setPipId(pip.getPipId());
-        response.setEmployeeId(pip.getEmployee().getId());
-        response.setManagerId(pip.getManager().getId());
-        response.setStartDate(pip.getStartDate());
-        response.setEndDate(pip.getEndDate());
-        response.setStatus(pip.getStatus());
-        response.setFinalOutcome(pip.getFinalOutcome());
-        response.setReason(pip.getReason());
-        return response;
+                .map(pipMapper::toResponse)
+                .toList();
     }
 }
